2007-07-18  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree/binarytree.rb (Tree::BinaryTreeNode::is*Child):
	Added tests for determining whether a node is a left or right
	child.

	* test/testbinarytree.rb: Added the test cases for the binary tree
	implementation.
	(TC_BinaryTreeTest::test_is*Child): Added tests for right or left
	childs.

	* lib/tree/binarytree.rb: Added the binary tree implementation.

 2007-07-17  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree.rb (Tree::TreeNode::parentage): Renamed 'ancestors'
	method to 'parentage' to avoid clobbering Module.ancestors

2007-07-16  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added an optional rtags task to generate TAGS file for
	Emacs.

	* lib/tree.rb (Tree::TreeNode): Added navigation methods for
	siblings and children. Also added some convenience methods.

2007-07-08  Anupam Sengupta  <anupamsg@gmail.com>

	* Rakefile: Added a developer target for generating rdoc for the
	website.

2007-06-24  Anupam Sengupta  <anupamsg@gmail.com>

	* test/testtree.rb, lib/tree.rb: Added the each_leaf traversal method.
v
	* README: Replaced all occurrances of LICENSE with COPYING
	and lowercased all instances of the word 'RubyTree'.

	* Rakefile: Replaced all occurrances of LICENSE with COPYING

2007-06-23  Anupam Sengupta  <anupamsg@gmail.com>

	* lib/tree.rb (Tree::TreeNode::isLeaf): Added a isLeaf? method.

	* test/testtree.rb (TC_TreeTest::test_removeFromParent): Added
	test for isLeaf? method

	* Rakefile: Added the LICENSE and ChangeLog to the extra RDoc files.

	* lib/tree.rb: Minor updates to the comments.

	* test/testtree.rb: Added the Copyright and License header.

	* test/person.rb: Added the Copyright and License header.

	* lib/tree.rb: Added the Copyright and License header.

	* Rakefile: Added the LICENSE and Changelog to be part of the RDoc task.

	* README: Added documentation in the README, including install
	instructions and an example.

	* LICENSE: Added the BSD LICENSE file.
