@@ -440,6 +440,20 @@ module Tree
       loadDumpRep(str)
     end
 
+    # Returns the depth of the tree from this node. A single leaf node has a
+    # depth of 1.
+    def depth
+      return 1 if isLeaf?
+      1 + @children.collect { |child| child.depth }.max
+    end
+
+    # Returns breadth of the tree at this node level. A single node has a
+    # breadth of 1.
+    def breadth
+      return 1 if isRoot?
+      parent.children.size
+    end
+
     protected :parent=, :setAsRoot!
     private_class_method :loadDumpRep
 
@@ -447,6 +461,9 @@ module Tree
 end
 
 # $Log$
+# Revision 1.15  2007/07/18 22:11:50  anupamsg
+# Added depth and breadth methods for the TreeNode.
+#
 # Revision 1.14  2007/07/18 19:33:27  anupamsg
 # Added a new binary tree implementation.
 #
